# data-engine

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SPEC.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
INSTALL/: BUILD DOCS.bat  BUILD DOCS.command  INSTALL MAC.command  INSTALL WINDOWS.bat  INSTALL WINDOWS_VM.bat
rust/egui_surface/: AGENTS.md  Cargo.toml
rust/egui_surface/src/: lib.rs
scripts/: build_egui_native.py  build_packaged_docs.py  export_project_bundle_script.py  generate_smoke_data.py  print_workspace_path.py  register_notebook_kernel.py
src/data_engine/: __init__.py
src/data_engine/application/: __init__.py  actions.py  catalog.py  control.py  details.py  runtime.py  workspace.py
src/data_engine/authoring/: __init__.py  builder.py  flow.py  helpers.py  model.py  primitives.py  services.py
src/data_engine/authoring/execution/: __init__.py  app.py  context.py  continuous.py  grouped.py  logging.py  polling.py  runner.py  single.py
src/data_engine/core/: __init__.py  flow.py  helpers.py  model.py  primitives.py
src/data_engine/devtools/: __init__.py  project_ast_map.py  smoke_data.py
src/data_engine/docs/: __init__.py
src/data_engine/docs/sphinx_source/: api.rst  conf.py  index.rst
src/data_engine/domain/: __init__.py  actions.py  catalog.py  debug_artifacts.py  details.py  diagnostics.py  errors.py  inspection.py  logs.py  operations.py  operator.py  runs.py  runtime.py  source_state.py  support.py  time.py  workspace.py
src/data_engine/flow_modules/: __init__.py  flow_module_compiler.py  flow_module_loader.py
src/data_engine/helpers/: __init__.py  duckdb.py  polars.py  schema.py
src/data_engine/helpers/duckdb/: __init__.py  _common.py  _dimensions.py  _maintenance.py  _read.py  _replace.py
src/data_engine/hosts/: __init__.py  scheduler.py
src/data_engine/hosts/daemon/: __init__.py  app.py  bootstrap.py  client.py  commands.py  composition.py  constants.py  entrypoints.py  lifecycle.py  manager.py  ownership.py  runtime_commands.py  runtime_control.py  runtime_events.py  runtime_ledger.py  server.py  shared_state.py  state_sync.py
src/data_engine/platform/: __init__.py  identity.py  instrumentation.py  interpreters.py  local_settings.py  paths.py  processes.py  theme.py  workspace_models.py  workspace_policy.py
src/data_engine/runtime/: __init__.py  engine.py  file_watch.py  ledger_models.py  result_cleanup.py  runtime_cache_store.py  runtime_control_store.py  runtime_db.py  shared_state.py  sqlite_store.py  stop.py
src/data_engine/runtime/execution/: __init__.py  app.py  context.py  continuous.py  grouped.py  logging.py  (+3 more)
src/data_engine/services/: __init__.py  daemon.py  daemon_state.py  debug_artifacts.py  flow_catalog.py  flow_execution.py  ledger.py  logs.py  operator_commands.py  operator_queries.py  reset.py  runtime_binding.py  runtime_execution.py  runtime_history.py  runtime_io.py  runtime_ports.py  runtime_state.py  settings.py  shared_state.py  theme.py  workspace_io.py  workspace_provisioning.py  workspaces.py
src/data_engine/ui/: __init__.py
src/data_engine/views/: __init__.py  actions.py  artifacts.py  flow_display.py  logs.py  models.py  presentation.py  runs.py  selection.py  state.py  status.py  text.py
tests/: conftest.py  test_application.py  test_authoring_helpers.py  test_authoring_services.py  test_builder.py  test_cli.py  test_cli_helpers.py  test_daemon.py  test_domain_actions.py  test_domain_details.py  test_domain_errors.py  test_domain_inspection.py  test_domain_logs.py  test_domain_operations.py  test_domain_runs.py  test_domain_runtime.py  test_domain_support.py  test_domain_workspace.py  test_export_project_bundle_script.py  test_flow_debug_context.py  test_flow_module_compiler.py  test_flow_module_loader.py  test_helpers_duckdb.py  test_helpers_polars.py  test_integration.py  test_live_runtime_suite.py  test_local_settings.py  test_logs.py  test_platform_identity.py  test_platform_instrumentation.py  test_project_ast_map.py  test_qt_ui.py  test_reset_service.py  test_runtime_db.py  test_runtime_history_service.py  test_runtime_logging.py  test_scheduler_host.py  test_schema_helper.py  test_services.py  test_shared_state.py  (+11 more)
tests/application/: test_detail_and_action_application.py  test_flow_catalog_application.py  test_operator_control_application.py  test_runtime_application.py  test_workspace_session_application.py
tests/authoring/: __init__.py  test_builder.py
tests/bootstrap/: support.py  test_services.py  test_window.py
tests/cli/: support.py  test_dependencies.py  test_doctor.py  test_helpers.py  test_run.py  test_start.py  test_workspace.py
tests/daemon/: __init__.py  support.py  test_client_process.py  test_host_core.py  test_lifecycle.py  test_live_runtime_suite.py  test_runtime_commands.py
tests/domain/: test_actions.py  test_catalog.py  test_details.py  test_logs.py  test_operations.py  test_operator.py  test_runs.py  test_runtime.py
tests/egui/: __init__.py  test_bootstrap.py  test_native.py  test_start.py
tests/flow_modules/: __init__.py  test_loader.py
tests/gui/qt/: conftest.py  support.py  test_core.py  test_preview_filters.py  test_runtime_controls.py  test_runtime_logs.py  test_runtime_sync.py  test_transport.py  test_workspace_views.py
tests/helpers/: __init__.py  test_duckdb.py  test_polars.py
tests/integration/: __init__.py  test_runtime.py
tests/runtime/: __init__.py  test_execution.py  test_logs.py
tests/services/: __init__.py  support.py  test_daemon_services.py  test_file_watch.py  test_flow_runtime_services.py  test_ledger_settings_support.py  test_operator_commands.py  test_operator_queries.py  test_reset_service.py  test_runtime_db.py  test_runtime_history_service.py  test_runtime_io.py  test_runtime_state_service.py  test_shared_state.py
tests/tui/: conftest.py  support.py  test_commands.py  test_items.py  test_logs.py  test_runtime.py  test_transport.py  test_workspaces.py
tests/views/: test_helpers.py  test_models.py  test_selection.py
tests/workspace_config/: __init__.py  test_sources.py
(+89 files in other folders)
