[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "APScheduler>=3.11.0",
  "duckdb>=1.5.0",
  "polars>=1.39.0",
  "myst-parser>=4.0.0",
  "Sphinx>=9.1.0",
  "sphinx_rtd_theme>=3.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "py-data-engine"
dynamic = ["version"]
description = "GUI orchestrator for python-based dataframe transform pipelines."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Data Engine contributors" },
]
keywords = ["duckdb", "excel", "parquet", "flow", "polars", "notebook"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "APScheduler>=3.11.0",
  "duckdb>=1.5.0",
  "fastexcel>=0.19.0",
  "polars>=1.39.0",
  "pyarrow>=23.0.1",
  "PySide6>=6.9.0",
  "textual>=0.74.0",
  "xlsxwriter>=3.2.9",
]

[project.urls]
Homepage = "https://github.com/bj-data-eng/data-engine"
Repository = "https://github.com/bj-data-eng/data-engine"
Issues = "https://github.com/bj-data-eng/data-engine/issues"

[project.scripts]
data-engine = "data_engine.ui.cli.app:main"

[project.optional-dependencies]
polars-lts = [
  "polars-lts-cpu>=1.33.1",
]
synthetic = [
  "numpy>=2.4.0",
  "openpyxl>=3.1.0",
  "pandas>=3.0.0",
]
notebook = [
  "ipykernel>=7.0.0",
  "ipython>=9.0.0",
  "jupyterlab>=4.4.0",
  "notebook>=7.4.0",
]
docs = [
  "myst-parser>=4.0.0",
  "Sphinx>=9.1.0",
  "sphinx_rtd_theme>=3.1.0",
]
package = [
  "pyinstaller>=6.15.0",
]
test = [
  "openpyxl>=3.1.0",
  "pandas>=3.0.0",
  "pydocstyle>=6.3.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
]
dev = [
  "ipykernel>=7.0.0",
  "ipython>=9.0.0",
  "jupyterlab>=4.4.0",
  "myst-parser>=4.0.0",
  "notebook>=7.4.0",
  "numpy>=2.4.0",
  "openpyxl>=3.1.0",
  "pandas>=3.0.0",
  "pydoclint>=0.7.6",
  "pydocstyle>=6.3.0",
  "pyinstaller>=6.15.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.10",
  "Sphinx>=9.1.0",
  "sphinx_rtd_theme>=3.1.0",
  "viztracer>=1.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_engine*"]

[tool.setuptools.package-data]
data_engine = [
  "ui/gui/icons/*.svg",
  "ui/egui/*.pyd",
  "ui/egui/*.so",
  "ui/egui/*.dylib",
  "docs/sphinx_source/conf.py",
  "docs/sphinx_source/*.rst",
  "docs/sphinx_source/guides/*.md",
  "docs/sphinx_source/_static/*.css",
  "docs/html/*",
  "docs/html/**/*",
]

[tool.setuptools.dynamic]
version = {attr = "data_engine.platform.identity.APP_VERSION"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["data_engine"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
