[package]
name = "data_engine_egui_native"
version = "0.1.0"
edition = "2024"

[lib]
name = "_data_engine_egui"
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.34", default-features = true }
egui = "0.34"
egui_commonmark = "0.23"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser"] }

[package.metadata.maturin]
python-source = "../../src"
module-name = "data_engine.ui.egui._data_engine_egui"
